# Total-Lagrangian-FEA

./: .bazelignore  .bazelrc  .clang-format  .gitignore  .gitmodules  BUILD  GPUMemoryManager.cu  GPUMemoryManager.cuh  MODULE.bazel  README.md  WORKSPACE  compile.sh  node_x_history.csv  test  test.cu
data/meshes/ANCF3243/: net_pinned_nx20_ny20_L0.5.ancf3243mesh  net_welded_nx20_ny20_L0.5.ancf3243mesh
data/meshes/ANCF3443/: airless_tire.ancf3443mesh
data/meshes/PLY/: bubble.ply  bubble_mirror_xy.ply  bunny_26_scaled_0p01.ply  dragon.poly  teapot.poly
data/meshes/T10/: beam_3x2x1_res16.1.ele  beam_6x2x1.1.ele  bunny_ascii_26.1.ele  bunny_ascii_26.1.node  cube.1.ele  cube.1.node  sphere.1.ele  sphere.1.uncompressed.npz  teapot.1.ele  teapot.1.node  tire.ele  tire.node
data/utest/: hrz_mass_reference.csv  mass_matrix_2_beam.csv  mass_matrix_3_beam.csv
docs/: macros.tex  main.tex
lib_bin/: test.cc  test.cu  test_ancf3243.cc  test_ancf3243_adamw.cc  test_ancf3243_adamw_mesh.cc  test_ancf3243_nesterov.cc  test_ancf3243_newton.cc  test_ancf3443.cc  test_ancf3443_adamw.cc  test_ancf3443_nesterov.cc  test_ancf3443_newton.cc  test_bubble_gripper_bunny.cc  test_feat10_adamw.cc  test_feat10_adamw_shmem.cc  test_feat10_bunny_adamw.cc  test_feat10_bunny_newton.cc  test_feat10_bunny_newton_debug.cc  test_feat10_nesterov.cc  test_feat10_resolution_adamw.cc  test_feat10_resolution_adamw_nocoop.cc  test_feat10_resolution_adamw_shmem.cc  test_feat10_resolution_adamw_soft.cc  test_feat10_resolution_nesterov.cc  test_feat10_resolution_newton.cc  test_feat10_resolution_newton_debug.cc  test_feat10_resolution_vbd.cc  test_sphere_drop_collision.cc
lib_bin/beam_sag/: BUILD.bazel  test_ancf3243.cc  test_ancf3443.cc  test_feat10_adamw.cc  test_feat10_explicit.cc  test_feat10_nesterov.cc  test_feat10_resolution.cc
lib_bin/collision_system/: BUILD.bazel  test_bubble_gripper_bunny.cc  test_bubble_gripper_bunny_floor.cc  test_item_drop.cc  test_sphere_drop_collision.cc
lib_bin/mesh_deform/: BUILD.bazel  test_ancf3243_net_newton.cc  test_ancf3443_mesh_newton.cc  test_feat10_bunny_adamw.cc  test_feat10_bunny_leapfrog.cc  test_feat10_bunny_newton.cc
lib_bin/multi_type/: BUILD.bazel  test_multi_element_gravity.cc
lib_bin/ptest/: BUILD.bazel  brick_sliding.cc  oblique_impact.cc  sphere_stacking.cc
lib_src/: GPUMemoryManager.cu  GPUMemoryManager.cuh  GPUMemoryManagerKernels.cuh
lib_src/collision/: BUILD.bazel  Broadphase.cu  Broadphase.cuh  BroadphaseFunc.cuh  CollisionSystemBase.h  CollisionTypes.cuh  DemeMeshCollisionSystem.cu  DemeMeshCollisionSystem.h  HydroelasticBroadphase.cu  HydroelasticBroadphase.cuh  HydroelasticBroadphaseFunc.cuh  HydroelasticCollisionTypes.cuh  HydroelasticNarrowphase.cu  HydroelasticNarrowphase.cuh  HydroelasticNarrowphaseFunc.cuh  HydroelasticPatchCollisionSystem.cc  HydroelasticPatchCollisionSystem.h  Narrowphase.cu  Narrowphase.cuh  NarrowphaseFunc.cuh
lib_src/elements/: ANCF3243Data.cu  ANCF3243Data.cuh  ANCF3243DataFunc.cuh  ANCF3243DataKernels.cuh  ANCF3443Data.cu  ANCF3443Data.cuh  ANCF3443DataFunc.cuh  ANCF3443DataKernels.cuh  BUILD.bazel  ElementBase.h  FEAT10Data.cu  FEAT10Data.cuh  FEAT10DataFunc.cuh  computeInternalF-MR.cu  internalF-KelvinVoigt.cu  internalF-MR-smem.cu  tlfea_problem_parameters.cuh
lib_src/materials/: BUILD.bazel  MaterialModel.cuh  MooneyRivlin.cuh  SVK.cuh  SolidMaterialProperties.h
lib_src/solvers/: BUILD.bazel  FEMultiElementProblem.cu  FEMultiElementProblem.h  FEStateBuffer.h  MultiElementNewton.cu  MultiElementNewton.cuh  SolverBase.h  SyncedAdamW.cu  SyncedAdamW.cuh  SyncedAdamWNocoop.cu  SyncedAdamWNocoop.cuh  SyncedAdamWshmem.cu  SyncedAdamWshmem.cuh  SyncedExplicit.cu  SyncedExplicit.cuh  SyncedNesterov.cu  SyncedNesterov.cuh  SyncedNewton.cu  SyncedNewton.cuh  SyncedVBD.cu  SyncedVBD.cuh
lib_utest/: BUILD.bazel  utest_3243.cc  utest_collision.cc  utest_feat10_cudss.cc  utest_feat10_mesh.cc  utest_hrz_mass.cc  utest_sparse_mass.cc  utest_utils.cc
lib_utils/: BUILD.bazel  cli_utils.cc  cli_utils.h  collision_system_interface.h  cpu_utils.cc  cpu_utils.h  csv_utils.cc  csv_utils.h  cuda_utils.h  mesh_manager.cc  mesh_manager.h  mesh_utils.cc  mesh_utils.h  quadrature_utils.h  surface_trimesh.cc  surface_trimesh.h  surface_trimesh_extract.cc  surface_trimesh_extract.h  visualization_utils.h
misc/: README.md
misc/shape-functions/: .gitignore  README.md  beam_22.py  beam_24.py  beam_34.py  build_latex.sh  hex_27.py  hex_27_basis.py  main.tex  shell_44.py  shell_92.py  tet_10.py
test-scripts/: compare_narrowphase.py  f-form-3243-adamw.py  f-form-3243-nesterov-wrestart.py  f-form-3243-nesterov.py  f-form-T10-nesterov.py  tet_mesh_reader.py  visualize_collision_results.py  visualize_contact_patches.py  visualize_three_spheres.py
test-scripts/3243-beam/: 3-beam-debug-beam.py  3-beam-debug.py  beam_mesh_generator.py  f-form-3243-adamw.py  f-form-3243-bb.py  f-form-3243-nesterov.py  grid_mesh_generator.py  net_mesh_gen.py
test-scripts/3443-shell/: f-form-3443-adamw.py  f-form-3443-nesterov.py
test-scripts/T10-tets/: beam_3x2x1.1.node  beam_6x2x1.1.node  f-form-T10-adamW.py  f-form-T10-beam-adamW.py  f-form-T10-beam-explicit.py  f-form-T10-beam-newton-damped.py  f-form-T10-beam-newton.py  f-form-T10-beaml-adamW.py  f-form-T10-cube-adamW.py  f-form-T10-nesterov.py  tet_mesh_reader.py
test-scripts/hydropatch_proto/: field.npz  field.vtu  harmonic_field.py  mesh_collision.py  reader.py  sap_bunny.py  sphere.1.node  tet_intersect.py
test-scripts/new-ancf-formulation/: 3-beam-agd.py  3-beam-bb-updated.py  3-beam-debug-automated.py  3-beam-debug-grid-automated.py  3-beam-debug-mesh.py  3-beam-debug.py  3-beam-nesterov-updated.py  beam_mesh_generator.py  debug-grid.py  grid_mesh_generator.py
test-scripts/vbd_proto/: alm_vbd_t10_svk.py
tools/: format.sh
validation/fenics/: beam_dynamic.py  beam_dynamic_backward_euler.py  beam_dynamic_box.py  beam_dynamic_vis.py  beam_static.py  bunny_dynamic.py  bunny_dynamic_backward_euler.py  bunny_static.py  environment.yml  tetgen_mesh_loader.py
(+71 files in other folders)
