module(
    name = "new_ancf",
    version = "0.1",
)

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.2.1")
bazel_dep(name = "rules_cuda", version = "0.2.5")
bazel_dep(name = "eigen", version = "3.4.0.bcr.3")
bazel_dep(name = "googletest", version = "1.14.0.bcr.1")

# Register CUDA toolchains provided by rules_cuda
register_toolchains("@rules_cuda//cuda:all")
