package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "test_feat10_bunny_adamw",
    srcs = ["test_feat10_bunny_adamw.cc"],
    copts = ["--std=c++17"],
    linkopts = [
        "-L/usr/local/cuda/lib64",
        "-lcusparse",
        "-lcudart",
    ],
    deps = [
        "//lib_src/elements:FEAT10Data",
        "//lib_src/solvers:solvers_syncedadamw",
        "//lib_src/solvers:solvers_syncednesterov",
        "//lib_src/solvers:solvers_syncednewton",
        "//lib_utils:cpu_utils",
        "@eigen//:eigen",
    ],
)

cc_binary(
    name = "test_feat10_bunny_newton",
    srcs = ["test_feat10_bunny_newton.cc"],
    copts = ["--std=c++17"],
    linkopts = [
        "-L/usr/local/cuda/lib64",
        "-lcusparse",
        "-lcudart",
        "-lcudss",
        "-lcublas",
    ],
    deps = [
        "//lib_src/elements:FEAT10Data",
        "//lib_src/solvers:solvers_syncedadamw",
        "//lib_src/solvers:solvers_syncednesterov",
        "//lib_src/solvers:solvers_syncednewton",
        "//lib_utils:cpu_utils",
        "@eigen//:eigen",
    ],
)

cc_binary(
    name = "test_ancf3243_net_newton",
    srcs = ["test_ancf3243_net_newton.cc"],
    copts = ["--std=c++17"],
    linkopts = [
        "-L/usr/local/cuda/lib64",
        "-lcublas",
        "-lcusparse",
        "-lcudart",
        "-lcudss",
    ],
    deps = [
        "//lib_src/elements:ANCF3243Data",
        "//lib_src/solvers:solvers_syncednewton",
        "//lib_utils:cli_utils",
        "//lib_utils:mesh_utils",
        "//lib_utils:visualization_utils",
        "@eigen//:eigen",
    ],
)

cc_binary(
    name = "test_ancf3443_mesh_newton",
    srcs = ["test_ancf3443_mesh_newton.cc"],
    copts = ["--std=c++17"],
    linkopts = [
        "-L/usr/local/cuda/lib64",
        "-lcublas",
        "-lcusparse",
        "-lcudart",
        "-lcudss",
    ],
    deps = [
        "//lib_src/elements:ANCF3443Data",
        "//lib_src/solvers:solvers_syncednewton",
        "//lib_utils:cli_utils",
        "//lib_utils:mesh_utils",
        "//lib_utils:visualization_utils",
        "@eigen//:eigen",
    ],
)
